# cpp-project-starter

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
scripts/windows/: clean.bat  generate_vs2022.bat
src/: CMakeLists.txt  main.cpp
